--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,7 @@ find_package(glfw3 CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_path(STB_INCLUDE_DIRS "stb_c_lexer.h")
 find_package(assimp CONFIG REQUIRED)
-
-include_directories(Shaders)
-include_directories(Textures)
+find_package(imgui CONFIG REQUIRED)
 
 add_subdirectory(Application)
 add_subdirectory(Source)
