Added Shader class...

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -9,10 +9,11 @@ target_include_directories(stb_image PUBLIC ${STB_INCLUDE_DIRS})
 target_compile_features(Window    PUBLIC cxx_std_17)
 target_compile_features(Mesh      PUBLIC cxx_std_17)
 target_compile_features(Triangle  PUBLIC cxx_std_17)
+target_compile_features(Shader    PUBLIC cxx_std_17)
 target_compile_features(stb_image PUBLIC cxx_std_17)
 
-target_link_libraries(Window       glfw glad::glad) 
-target_link_libraries(Mesh     glm glfw glad::glad) 
-target_link_libraries(Triangle glm glfw glad::glad) 
-target_link_libraries(Shader   glm glfw glad::glad) 
+target_link_libraries(Window            glfw glad::glad) 
+target_link_libraries(Mesh     glm::glm glfw glad::glad) 
+target_link_libraries(Triangle glm::glm glfw glad::glad) 
+target_link_libraries(Shader   glm::glm glfw glad::glad) 
 
