--- a/Application/CMakeLists.txt
+++ b/Application/CMakeLists.txt
@@ -4,5 +4,12 @@ target_include_directories(Application PRIVATE "../Source")
 
 target_compile_features(Application PRIVATE cxx_std_17)
 
-target_link_libraries(Application PUBLIC Window)
-
+target_link_libraries(
+	Application PRIVATE
+	Transformation 
+	Texture 
+	Rectangle 
+	Mesh
+	Shader 
+	Window
+)
