--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -11,6 +11,7 @@
 	"Camera.cpp"
 	"Timer.cpp"
 	"Sphere.cpp"
+	"Cube.cpp"
 	"Renderer.cpp"
 	"stb_image.cpp")
 
@@ -27,6 +28,7 @@ set(HEADER_LIST
 	"Camera.h"
 	"Timer.h"
 	"Sphere.h"
+	"Cube.h"
 	"Renderer.h"
 	"Constants.h"
 	"Vertex.h"
